--- a/index.html
+++ b/index.html
@@ -33,8 +33,36 @@
                 <div class="about-col-1">
                     <img src="images/user.png" >
                 </div>
-                <div class="about-col-2"></div>
-                <h1>About Me</h1>
+                <div class="about-col-2">
+                <h1 class="sub-title">About Me</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas itaque eveniet molestiae facere recusandae, quaerat officia consequatur nulla esse ipsam corrupti repellendus totam. Vel quis nostrum qui corporis magnam animi!</p>
+                <div class="tab-titles">
+                    <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+                    <p class="tab-links" onclick="opentab('Experience')">Experience</p>
+                    <p class="tab-links" onclick="opentab('education')">Education</p>
+                    
+                </div>
+                <div class="tab-content">
+                    <ul>
+                        <li><span>UI/UX</span><br>Design Web/App interface</li>
+                        <li><span>WebApplication</span><br>Design Web/App Developement</li>
+                        <li><span>App Developement</span><br>Design Web/App interface</li>
+                    </ul>
+                </div>
+                <div class="tab-content active-tab">
+                    <ul>
+                        <li><span>UI/UX</span><br>Design Web/App interface</li>
+                        <li><span>WebApplication</span><br>Design Web/App Developement</li>
+                        <li><span>App Developement</span><br>Design Web/App interface</li>
+                    </ul>
+                </div>
+                <div class="tab-content">
+                    <ul>
+                        <li><span>UI/UX</span><br>Design Web/App interface</li>
+                        <li><span>WebApplication</span><br>Design Web/App Developement</li>
+                        <li><span>App Developement</span><br>Design Web/App interface</li>
+                    </ul>
+                </div>
                 </div>
             </div>
          </div>  
