--- a/index.html
+++ b/index.html
@@ -89,6 +89,42 @@
     </div>
 
 </div>
+<!-----------portfolio------------------->
+<div id="portfolio">
+    <div class="container">
+
+        <h1 class="sub-title"> My Website</h1>
+        <div class="work-list">
+            <div class="work">
+                <img src="images/work-1.png" alt="img1">
+                <div class="layer">
+                    <h3>Social Media App</h3>
+                    <p>The app connects you to the talented people arpound the world.
+                        Download it from play store.
+                    </p>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/work-2.png" alt="img1">
+                <div class="layer">
+                    <h3>Music App</h3>
+                    <p>The app connects you to the talented people arpound the world.
+                        Download it from play store.
+                    </p>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/work-3.png" alt="img1">
+                <div class="layer">
+                    <h3>Shopping App</h3>
+                    <p>The app connects you to the talented people arpound the world.
+                        Download it from play store.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
     <script>
         var tablinks= document.getElementsByClassName("tab-links");
