--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="tab-content" id="experience" >
                     <ul>
-                        <li><span>UI/UX</span><br>Design Web/App interface</li>
+                        <li><span>2022-Curerent</span><br>Design Web/App interface</li>
                         <li><span>WebApplication</span><br>Design Web/App Developement</li>
                         <li><span>App Developement</span><br>Design Web/App interface</li>
                     </ul>
