--- a/index.html
+++ b/index.html
@@ -7,19 +7,22 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div id="header">
         <div class="container"> 
             <nav>
                <img src="images/logo.png" alt="" class="logo"> 
-               <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
+               <ul id="sidemenu">
+                <li><a href="#header">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <i class="fas fa-times" onclick="closemenu()"></i>
                </ul>
+               <i class="fa fa-bars" aria-hidden="true" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
                 <p>UI/UX Designer</p>
@@ -133,8 +136,8 @@
         <div class="row">  
             <div class="contact-left">
                 <h1 class="sub-title">Contact me</h1>
-                <p>contact@exp.com</p>
-                <p>0987765432</p>
+                <p><i class="fas fa-paper-plane"> </i>contact@exp.com</p>
+                <p><i class="fas fa-phone-square-alt"> </i>0987765432</p>
                 <div class="social-icons">
                     <a href="http://facebook.come/"><span class="bi-twitter"></span></a>
                     <a href=""><span class="bi-linkedin"></span></a>
@@ -173,6 +176,17 @@
             document.getElementById(tabname).classList.add("active-tab");
         }
        
+    
+        var sidemenu= document.getElementById("sidemenu");
+
+        function openmenu(){
+
+        sidemenu.style.right="0";
+        }
+        function closemenu(){
+
+           sidemenu.style.right="-200px";
+        }
     </script>
 </body>
 </html>
